tools/pwig/demos/pascal_callee/testlib_intf.pas

// ************************************************************************
// This file contains common interface for both the caller and the callee.
// -------
// WARNING
// -------
// This file was generated by PWIG. Do not edit.
// File generated on 30.10.2016 18:10:05

unit testlib_intf;

{$IFDEF FPC}{$MODE DELPHI}{$ENDIF}

// Library properties:
// Name: TestLib
// Version: 1.0
// GUID: F3C093C0-035B-4C33-BB28-C1FDE270D3B5
// Description: Test library

interface

uses
  SysUtils;

type

  // Forward declarations:
  IProject = type Int64;
  IProjectGroup = type Int64;
  IProjectGroupEvents = type Int64;

  // Enumerated type properties:
  // Name: TRetCode
  // GUID: 810C7D96-27EE-44A8-BA21-5161FF01BFA0
  // Description: Library return code

  TRetCode = (
    rcOk = 0,
    rcError = 1
  );

  // Enumerated type properties:
  // Name: TErrorCode
  // GUID: 6B90024F-AE26-42D4-8F6A-8BDA2EE69EF1
  // Description: Log message code

  TErrorCode = (
    errError = 0,
    errWarning = 1,
    errNote = 2,
    errHint = 3
  );

  // Enumerated type properties:
  // Name: TProgressEvent
  // GUID: 19B84FC3-1B2C-4E0C-A9F1-4B35EEA625BA
  // Description: Progress event code

  TProgressEvent = (
    peStart = 0,
    peAdvance = 1,
    peStop = 2
  );

  // Enumerated type properties:
  // Name: TBool
  // GUID: 6C87BDB8-1CE8-40DE-92CF-41C853A63453
  // Description: Library return code

  TBool = (
    bFalse = 0,
    bTrue = 1
  );

  // Alias type properties:
  // Name: TApplicationHandle
  // GUID: 6F9B4493-91C4-446A-8CBA-D55D05D11754
  // Description: Application handle

  TApplicationHandle = type Int64;

  // Alias type properties:
  // Name: TDataPtr
  // GUID: D687E02D-F3F1-49C9-84C9-2E11749B6412
  // Description: Pointer to array of bytes

  TDataPtr = type PByteArray;

  // Interface type properties:
  // Name: IProject
  // GUID: 2CDCBC7C-2760-479E-B07B-3C2C8C61A61C
  // Description: Dispatch interface for Project Object
  // Dual interface (COM only)
  // OLE automation interface (COM only)

  // Methods:
  TIProjectConnect = function(const ItemHandle: IProject): Boolean; cdecl;
  TIProjectDisconnect = function(const ItemHandle: IProject): Boolean; cdecl;
  TIProjectLoadFromFile = function(const ItemHandle: IProject; const Path: PAnsiChar; out Result1: TBool): Boolean; cdecl;
  TIProjectSaveToFile = function(const ItemHandle: IProject; const Path: PAnsiChar; out Result1: TBool): Boolean; cdecl;
  // Properties:
  TGetIProjectConnectionFRC = function(const ItemHandle: IProject; out Value: LongInt): Boolean; cdecl;
  TGetIProjectConnectionString = function(const ItemHandle: IProject; const Value: PAnsiChar; var Length__Value: LongInt): Boolean; cdecl;

  // Interface type properties:
  // Name: IProjectGroup
  // GUID: 935120E2-A9E0-4B06-98AE-4EE58DA9036E
  // Description: Dispatch interface for ProjectGroup Object
  // Dual interface (COM only)
  // OLE automation interface (COM only)

  // Methods:
  TIProjectGroupAddProject = function(const ItemHandle: IProjectGroup; out Project: IProject): Boolean; cdecl;
  TIProjectGroupRunPeriodic = function(const ItemHandle: IProjectGroup): Boolean; cdecl;
  TIProjectGroupFinalize = function(const ItemHandle: IProjectGroup): Boolean; cdecl;
  // Properties:

  // Interface type properties:
  // Name: IProjectGroupEvents
  // GUID: 08199EC9-1D26-442A-BE88-7B953C71EC7E
  // Description: Events interface for ProjectGroup Object

  // Methods:
  TIProjectGroupEventsOnError = function(const ItemHandle: IProjectGroupEvents; const ErrorCode: TErrorCode; const ErrorText: PAnsiChar): Boolean; cdecl;
  TIProjectGroupEventsOnProgress = function(const ItemHandle: IProjectGroupEvents; const EventCode: TProgressEvent; const ProgressValue: LongInt; const EventText: PAnsiChar): Boolean; cdecl;
  // Properties:

  // Class properties:
  // Name: ProjectGroup
  // GUID: 7C12BB43-A6AB-4A52-8B1D-EDD5D94B344B
  // Description: ProjectGroup Object

  TProjectGroupCreate = function(out ItemHandle: IProjectGroup): Boolean; cdecl;
  TProjectGroupDestroy = function(const ItemHandle: IProjectGroup): Boolean; cdecl;
  TSetProjectGroupIProjectGroupEventsOnError = function(const ItemHandle: IProjectGroup; const EventSink: IProjectGroupEvents; const EventHandler: TIProjectGroupEventsOnError): Boolean; cdecl;
  TSetProjectGroupIProjectGroupEventsOnProgress = function(const ItemHandle: IProjectGroup; const EventSink: IProjectGroupEvents; const EventHandler: TIProjectGroupEventsOnProgress): Boolean; cdecl;

  // Class properties:
  // Name: Project
  // GUID: D96EA22B-D750-4C05-9F32-8C5C8E9F846D
  // Description: Project Object

  TProjectCreate = function(out ItemHandle: IProject): Boolean; cdecl;
  TProjectDestroy = function(const ItemHandle: IProject): Boolean; cdecl;

implementation

end.
